Get started on the website and perform setup.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>DSC - California State University San Marcos</title>
+    <title>DSC - University of California, Berkeley</title>
     <meta name="description"
         content="Helping students bridge the gap between theory and practice. Supported by Google Developers.">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -70,7 +70,7 @@
                 <a href="#Home" class="brand-logo">
                     <div class="center-brand">
                         <img class="dsc-logo" src="../images/dsc-logo-2.png">
-                        <span class="dsc-brand hide-on-small-only">&nbsp;&nbsp;DSC CSUSM</span>
+                        <span class="dsc-brand hide-on-small-only">&nbsp;&nbsp;DSC Berkeley</span>
                     </div>
                 </a>
                 <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -113,7 +113,7 @@
         <div class="brand container">
             <div class="row">
                 <div class="brand text-center">
-                    <h1 class="caption-title">DSC CSUSM</h1>
+                    <h1 class="caption-title">DSC Berkeley</h1>
                     <h2 class="caption-subtitle">Developer Student Club | Powered By Google Developers</h2>
                     <code class="hashtag">#developerstudentclubs</code>&nbsp;&nbsp;
                     <code class="hashtag">#googlestudents</code>&nbsp;&nbsp;
