--- a/src/views/team.html
+++ b/src/views/team.html
@@ -424,13 +424,13 @@
     <footer class="footer-section">
         <div class="container">
             <div class="row">
-                <div class="col s12">
-                    <h5 class="text-gray footer-title">DSC CSUSM - Powered by Google Developers</h5>
-                    <p class="text-gray footer-location">California State University San Marcos
-                        <br>San Marcos, CA 92096, USA
-                    </p>
+                    <div class="col s12">
+                        <h5 class="text-gray footer-title">DSC Berkeley - Powered by Google Developers</h5>
+                        <p class="text-gray footer-location">University of California, Berkeley
+                            <br>Berkeley, CA 94720, USA
+                        </p>
+                    </div>
                 </div>
-            </div>
             <!-- <div class="row footer-social-media-title">
                     <h2 class="social-media-title">Follow us on</h2>
                 </div> -->
