Finish the website (at least until a bug is found)

--- a/src/public/css/join.css
+++ b/src/public/css/join.css
@@ -250,9 +250,7 @@ canvas {
     background: url('../images/events/1.JPG');
 }
 
-#slide2 {
-    background: url('../images/events/info.jpg');
-}
+
 
 #slide3 {
     background: url('../images/events/3.jpg');
@@ -476,14 +474,14 @@ canvas {
     font-weight: 400;
 }
 
-.footer-social-media .linkedin {
-    color: #0077B5;
+.footer-social-media .github {
+    color: #000000;
     font-size: 40px;
     padding: 10px;
 }
 
-.footer-social-media .instagram {
-    color: #BC2A8D;
+.footer-social-media .facebook {
+    color: #2d6ee3;
     font-size: 40px;
     padding: 10px;
 }
@@ -494,8 +492,8 @@ canvas {
     padding: 10px;
 }
 
-.footer-social-media .discord {
-    color: #7289DA;
+.footer-social-media .slack {
+    color: #000000;
     font-size: 40px;
     padding: 10px;
 }
