--- a/src/views/team.ejs
+++ b/src/views/team.ejs
@@ -112,19 +112,20 @@
                         <div class="card white-card">
                             <div class="card-content black-text">
                                 <img class="card-img-core-team circle z-depth-3 activator"
-                                    src="https://via.placeholder.com/125x125">
-                                <p class="card-title">This can be you!</p>
-                                <p class="card-subtitle team-lead">Position</p>
+                                     src="/images/profiles/yueling_li.jpg">
+                                <p class="card-title">Yueling Li</p>
+                                <p class="card-subtitle team-lead">Social Media Manager</p>
                             </div>
                             <div class="card-action center-align">
-                                <a id="link" href="/officer">Apply to become an officer!</a>
+<!--                                <a id="portfolio" href="https://artemtkachuk.me"><i class="fas fa-globe social-icons"></i></a>-->
+                                <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/artemtkachuk/"><i class="fab fa-linkedin-in social-icons"></i></a>
+<!--                                <a id="github" target="_blank" href="https://github.com/artem-tkachuk"><i class="fab fa-github social-icons"></i></a>-->
+<!--                                <a id="instagram" target="_blank" href="https://twitter.com/artem__tkachuk"><i class="fab fa-twitter social-icons"></i></a>-->
                             </div>
                             <div class="card-reveal">
-                                <span class="card-title reveal-title grey-text text-darken-4">About Me<i
-                                        class="material-icons right">close</i></span>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                    Beatae commodi delectus
-                                    repellendus, quis pariatur eos.</p>
+                                <span class="card-title reveal-title grey-text text-darken-4">About Yueling<i
+                                            class="material-icons right">close</i></span>
+                                <p>Yueling is a freshman at UC Berkeley with an interest in Cognitive Science and History of Art. She is the social media manager.</p>
                             </div>
                         </div>
                     </div>
