--- a/src/views/team.ejs
+++ b/src/views/team.ejs
@@ -118,7 +118,7 @@
                             </div>
                             <div class="card-action center-align">
 <!--                                <a id="portfolio" href="https://artemtkachuk.me"><i class="fas fa-globe social-icons"></i></a>-->
-                                <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/artemtkachuk/"><i class="fab fa-linkedin-in social-icons"></i></a>
+                                <a id="linkedin" target="_blank" href="#"><i class="fab fa-linkedin-in social-icons"></i></a>
 <!--                                <a id="github" target="_blank" href="https://github.com/artem-tkachuk"><i class="fab fa-github social-icons"></i></a>-->
 <!--                                <a id="instagram" target="_blank" href="https://twitter.com/artem__tkachuk"><i class="fab fa-twitter social-icons"></i></a>-->
                             </div>
