Minor changes and new content

--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -1,7 +1,7 @@
 
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>DSC - UC Berkeley</title>
+    <title>Google DSC @ UC Berkeley</title>
     <meta name="description"
           content="Helping students bridge the gap between theory and practice. Supported by Google Developers.">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
