--- a/src/views/team.ejs
+++ b/src/views/team.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <%- include('includes/head.ejs'); -%>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/index.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/team.css'>
 </head>
 
@@ -133,6 +134,27 @@
                         <div class="card white-card">
                             <div class="card-content black-text">
                                 <img class="card-img-core-team circle z-depth-3 activator"
+                                     src="/images/profiles/gunjan_anand.jpg">
+                                <p class="card-title">Gunjan Anand</p>
+                                <p class="card-subtitle team-lead">Marketing</p>
+                            </div>
+                            <div class="card-action center-align">
+                                <!--                                <a id="portfolio" href="https://artemtkachuk.me"><i class="fas fa-globe social-icons"></i></a>-->
+                                <a id="linkedin" target="_blank" href="#"><i class="fab fa-linkedin-in social-icons"></i></a>
+                                <!--                                <a id="github" target="_blank" href="https://github.com/artem-tkachuk"><i class="fab fa-github social-icons"></i></a>-->
+                                <!--                                <a id="instagram" target="_blank" href="https://twitter.com/artem__tkachuk"><i class="fab fa-twitter social-icons"></i></a>-->
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title reveal-title grey-text text-darken-4">About Gunjan<i
+                                            class="material-icons right">close</i></span>
+                                <p>Gunjan is a Sophomore from India. She is interested in Computer Science, Linguistics, Operations Research, and Management Sciences.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m8 offset-m2 l4">
+                        <div class="card white-card">
+                            <div class="card-content black-text">
+                                <img class="card-img-core-team circle z-depth-3 activator"
                                     src="https://via.placeholder.com/125x125">
                                 <p class="card-title">This can be you!</p>
                                 <p class="card-subtitle team-lead">Position</p>
@@ -143,6 +165,46 @@
                             <div class="card-reveal">
                                 <span class="card-title reveal-title grey-text text-darken-4">About Me<i
                                         class="material-icons right">close</i></span>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Beatae commodi delectus
+                                    repellendus, quis pariatur eos.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m8 offset-m2 l4">
+                        <div class="card white-card">
+                            <div class="card-content black-text">
+                                <img class="card-img-core-team circle z-depth-3 activator"
+                                     src="https://via.placeholder.com/125x125">
+                                <p class="card-title">This can be you!</p>
+                                <p class="card-subtitle team-lead">Position</p>
+                            </div>
+                            <div class="card-action center-align">
+                                <a id="link" href="/officer">Apply to become an officer!</a>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title reveal-title grey-text text-darken-4">About Me<i
+                                            class="material-icons right">close</i></span>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Beatae commodi delectus
+                                    repellendus, quis pariatur eos.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m8 offset-m2 l4">
+                        <div class="card white-card">
+                            <div class="card-content black-text">
+                                <img class="card-img-core-team circle z-depth-3 activator"
+                                     src="https://via.placeholder.com/125x125">
+                                <p class="card-title">This can be you!</p>
+                                <p class="card-subtitle team-lead">Position</p>
+                            </div>
+                            <div class="card-action center-align">
+                                <a id="link" href="/officer">Apply to become an officer!</a>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title reveal-title grey-text text-darken-4">About Me<i
+                                            class="material-icons right">close</i></span>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                                     Beatae commodi delectus
                                     repellendus, quis pariatur eos.</p>
