--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -165,11 +165,11 @@ nav ul a:hover {
 .caption-subtitle {
     color: #4E4E4E;
     font-size: 1.5em;
-    font-weight: 600;
+    font-weight: 200;
 }
 
 .hashtag {
-    color: #FF69B4;
+    color: #4E4E4E;
     font-size: 1.25rem;
 }
 
@@ -204,7 +204,7 @@ canvas {
 }
 
 .about-section-img {
-    background-image: url('../images/events/1.JPG');
+    background-image: url('../images/events/1.jpg');
     background-size: cover;
     background-position: center;
     width: auto;
@@ -498,7 +498,13 @@ canvas {
     padding: 10px;
 }
 
-.footer-social-media .slack {
+.footer-social-media .discord {
+    color: #000000;
+    font-size: 40px;
+    padding: 10px;
+}
+
+.footer-social-media .email {
     color: #000000;
     font-size: 40px;
     padding: 10px;
