--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,28 +1,34 @@
 <footer class="footer-section">
     <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <h5 class="text-gray footer-title">DSC Berkeley - Powered by Google Developers</h5>
-                <p class="text-gray footer-location">University of California, Berkeley
-                    <br>Berkeley, CA 94720, USA
-                </p>
-            </div>
-        </div>
         <!-- <div class="row footer-social-media-title">
             <h2 class="social-media-title">Follow us on</h2>
         </div> -->
         <div class="row">
             <div class="row">
-                <h2 class="social-media-title text-gray">Follow us on</h2>
+                <h2 class="social-media-title text-gray">Get in touch with us!</h2>
                 <div class="footer-social-media">
+                    <a class="email" target="_blank" href="mailto:atkachuk@berkeley.edu"><i class="fas fa-envelope"></i></a>
                     <a class="github" target="_blank" href="https://github.com/dsc-berkeley"><i class="fab fa-github"></i></a>
                     <a class="facebook" target="_blank" href="https://www.facebook.com/gdscberkeley"><i class="fab fa-facebook"></i></a>
                     <a class="twitter" target="_blank" href="https://twitter.com/DSC_Berkeley"><i class="fab fa-twitter"></i></a>
-                    <a class="slack" target="_blank" href="https://join.slack.com/t/berkeley-3ni2781/shared_invite/zt-gzjlpeiv-XbTH5lrgoECVo8tDJLSWag"><i class="fab fa-slack"></i></a>
+                    <a class="discord" target="_blank" href="https://discord.gg/cx83c5n5re"><i class="fab fa-discord"></i></a>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col s12">
+            <br>
+            <br>
+            <h5 class="text-gray footer-title">Google DSC @ Berkeley</h5>
+            <h6>Powered by Google Developers</h6>
+            <p class="text-gray footer-location">University of California, Berkeley
+                <br>Berkeley, CA 94720, United States
+            </p>
+        </div>
+    </div>
+
     <div class="footer-copyright text-gray">
         <div class="container">
             <h6>Made with&nbsp;<i class="fas fa-heart footer-love"></i>&nbsp;and <i
