--- a/src/views/includes/navbar.ejs
+++ b/src/views/includes/navbar.ejs
@@ -31,6 +31,9 @@
                     <a class="nav-link" href="/#Contact">Contact</a>
                 </li>
                 <li class="nav-item">
+                    <a class="email" target="_blank" href="mailto:atkachuk@berkeley.edu"><i class="fas fa-envelope"></i></a>
+                </li>
+                <li class="nav-item">
                     <a class="github" target="_blank" href="https://github.com/dsc-berkeley"><i class="fab fa-github"></i></a>
                 </li>
                 <li class="nav-item">
@@ -40,7 +43,7 @@
                     <a class="twitter" target="_blank" href="https://twitter.com/DSC_Berkeley"><i class="fab fa-twitter"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="slack" target="_blank" href="https://join.slack.com/t/berkeley-3ni2781/shared_invite/zt-gzjlpeiv-XbTH5lrgoECVo8tDJLSWag"><i class="fab fa-slack"></i></a>
+                    <a class="discord" target="_blank" href="https://discord.gg/cx83c5n5re"><i class="fab fa-discord"></i></a>
                 </li>
             </ul>
         </div>
