--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,7 +37,7 @@
             <div class="brand container">
                 <div class="row">
                     <div class="brand text-center">
-                        <h1 class="caption-title">DSC Berkeley</h1>
+                        <h1 class="caption-title">Google DSC @ Berkeley</h1>
                         <h2 class="caption-subtitle">Developer Student Club | Powered By Google Developers</h2>
                         <code class="hashtag">#developerstudentclubs</code>&nbsp;&nbsp;
                         <code class="hashtag">#googlestudents</code>&nbsp;&nbsp;
@@ -66,7 +66,7 @@
                                 local businesses and their community.
                             </h4>
                             <a class="waves-effect waves-light btn-large about-learn-more"
-                                href="https://developers.google.com/community/dsc/">Learn More</a>
+                                href="https://developers.google.com/community/dsc/">Learn More about DSC</a>
                         </div>
                     </div>
                     <div class="col hide-on-small-only l7 about-section-img" style="overflow:hidden">
@@ -84,7 +84,12 @@
                         videos, to large gatherings with demos, tech talks, hackathons and conferences. We work on various
                         technical domains and try to make use of Google Technologies to empower the audience around us.
                     </h3>
+                    <br>
+                    <h4 class="what-we-do-description">To appreciate the past achievements of the DSC Berkeley, check out CoronAI - a project built at UC Berkeley that was among the 10 winner of annual <a href="https://developers.google.com/community/dsc-solution-challenge">DSC Solution Challenge</a> in 2020!</h4>
+
+                    <div class="what-we-do-description"></div><iframe style width="100%" height="700px" src="https://www.youtube.com/embed/2Go1ok0Xagk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 </div>
+
             </div>
             <!-- WHAT WE DO END -->
 
@@ -116,9 +121,9 @@
             <div id="Gallery" class="gallery-section scrollspy">
                 <div class="container carousel-container">
                     <div id="owl-demo" class="owl-carousel owl-theme">
-                        <div class="item">
-                            <img src="../images/events/1.JPG">
-                        </div>
+<!--                        <div class="item">-->
+<!--                            <img src="../images/events/1.jpg">-->
+<!--                        </div>-->
                         <div class="item">
                             <img src="../images/events/3.jpg">
                         </div>
