--- a/src/views/join.ejs
+++ b/src/views/join.ejs
@@ -4,6 +4,7 @@
 <!-- HEADER BEGIN -->
     <head>
         <%- include('includes/head.ejs'); -%>
+        <link rel='stylesheet' type='text/css' media='screen' href='../css/index.css'>
         <link rel='stylesheet' type='text/css' media='screen' href='/css/join.css'>
     </head>
 <!-- HEADER END -->
