File structure changes

--- a/src/views/includes/sidenav.ejs
+++ b/src/views/includes/sidenav.ejs
@@ -1,3 +1,4 @@
+<!-- SIDENAV START -->
 <ul class="sidenav" id="mobile-nav">
     <li><a class="menu-items" href="/#AboutUs">About</a></li>
     <li><a class="menu-items" href="/team">Team</a></li>
@@ -7,3 +8,4 @@
     <li><a class="menu-items" href="/officer">Officer app</a></li>
     <li><a class="menu-items" href="/#Contact">Contact</a></li>
 </ul>
+<!-- SIDENAV END -->
