--- a/src/views/includes/navbar.ejs
+++ b/src/views/includes/navbar.ejs
@@ -1,3 +1,4 @@
+<!-- NAVBAR START -->
 <div class="navbar-fixed">
     <nav class="whiteNav" role="navigation">
         <div class="nav-wrapper container">
@@ -49,3 +50,4 @@
         </div>
     </nav>
 </div>
+<!-- NAVBAR END -->
