--- a/src/views/includes/sidenav.ejs
+++ b/src/views/includes/sidenav.ejs
@@ -7,5 +7,11 @@
     <li><a class="menu-items" href="/join">Join</a></li>
     <li><a class="menu-items" href="/officer">Officer app</a></li>
     <li><a class="menu-items" href="/#Contact">Contact</a></li>
+    <li><a class="menu-items" href="/#Contact">Contact</a></li>
+    <li><a class="email menu-items" target="_blank" href="mailto:atkachuk@berkeley.edu"><i class="fas fa-envelope"></i></a></li>
+    <li><a class="menu-items github" target="_blank" href="https://github.com/dsc-berkeley"><i class="fab fa-github"></i></a></li>
+    <li><a class="menu-items facebook" target="_blank" href="https://www.facebook.com/gdscberkeley"><i class="fab fa-facebook"></i></a></li>
+    <li><a class="menu-items twitter" target="_blank" href="https://twitter.com/DSC_Berkeley"><i class="fab fa-twitter"></i></a></li>
+    <li><a class="menu-items discord" target="_blank" href="https://discord.gg/cx83c5n5re"><i class="fab fa-discord"></i></a></li>
 </ul>
 <!-- SIDENAV END -->
