--- a/src/views/index/photo_gallery.ejs
+++ b/src/views/index/photo_gallery.ejs
@@ -14,9 +14,9 @@
             <div class="item">
                 <img src="../images/events/6.jpg">
             </div>
-            <div class="item">
-                <div class="what-we-do-description"></div><iframe style width="100%" height="700px" src="https://www.youtube.com/embed/2Go1ok0Xagk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-            </div>
+<!--            <div class="item">-->
+<!--                <div class="what-we-do-description"></div><iframe style width="100%" height="700px" src="https://www.youtube.com/embed/2Go1ok0Xagk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
