--- a/src/views/index/what_we_do.ejs
+++ b/src/views/index/what_we_do.ejs
@@ -11,7 +11,7 @@
         <h4 class="what-we-do-description">To appreciate the past achievements of the DSC Berkeley, check out CoronAI - a project built at UC Berkeley that was among the 10 winner of annual <a href="https://developers.google.com/community/dsc-solution-challenge">DSC Solution Challenge</a> in 2020!</h4>
 
 
-        <div class="what-we-do-description"></div><iframe style width="100%" height="700px" src="https://www.youtube.com/embed/2Go1ok0Xagk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+<!--        <div class="what-we-do-description"></div><iframe style width="100%" height="700px" src="https://www.youtube.com/embed/2Go1ok0Xagk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>-->
 </div>
 
 </div>
